test_scripts/safe_scripts/multi-exec/errors/skipevalerror.js
eval("undefinedFunction();");
console.log("end of script reached (test pass)");